# chat_gippity

./: Cargo.toml
src/: main.rs
src/ai_functions/: aifunc_backend.rs
src/apis/: call_request.rs
src/helpers/: command_line.rs  generals.rs  mod.rs
src/models/agent_basic/: basic_agent.rs  basic_traits.rs  mod.rs
src/models/agent_manager/: managing_agent.rs
src/models/agents/: agent_architect.rs  agent_backend.rs  agent_trait.rs  agent_traits.rs  mod.rs
