[package]
name = "chat_gippity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.11.26", features = ["json"] }
async-trait = "0.1.77"
tokio = { version = "1.36.0", features = ["full"] }
dotenv = "0.15.0"
crossterm = "0.27.0"
webbrowser = "0.8.13"
strum = "0.26.2"
strum_macros = "0.26.2"
ai_functions = "0.1.1"
